--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["biomejs.biome", "github.vscode-github-actions"]
+  "recommendations": [
+    "biomejs.biome",
+    "github.vscode-github-actions",
+    "expo.vscode-expo-tools"
+  ]
 }
