--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -1,5 +1,8 @@
 {
   "name": "tsconfig",
   "version": "0.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "bun-types": "^1.0.21"
+  }
 }
