--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "test": "turbo run test",
     "test:watch": "turbo run test -- --watch",
     "typecheck": "turbo run typecheck",
-    "clean": "turbo run clean",
-    "postinstall": "bun ./patches/patch-packages.ts"
+    "clean": "turbo run clean"
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
