--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -3,7 +3,6 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "eas-build-pre-install": "bun install && bun ../../patches/patch-packages.ts",
     "eas-build-post-install": "bun turbo run build --filter=mobile-app",
     "dev": "cli expo dev --platform ios --profile debug",
     "build:ios-debug": "cli expo build --platform ios --profile debug",
@@ -16,23 +15,22 @@
     "fix": "cli tools fix"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~49.0.15",
-    "expo-build-properties": "~0.8.3",
-    "expo-font": "~11.4.0",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-updates": "~0.18.19",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^50.0.0",
+    "expo-build-properties": "~0.11.0",
+    "expo-font": "~11.10.2",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.4",
+    "expo-splash-screen": "~0.26.3",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-updates": "~0.24.8",
+    "expo-web-browser": "~12.8.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
