--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,9 @@
   "name": "cli",
   "version": "0.0.1",
   "files": ["bin", "src"],
-  "bin": "./bin",
+  "bin": {
+    "cli": "./bin"
+  },
   "scripts": {
     "biome": "./bin tools biome",
     "typecheck": "./bin tools typecheck",
