--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "bun --bun next dev",
     "build": "next build",
+    "docgen": "cli docs build --input @fake/components",
     "start": "next start",
     "biome": "biome ci .",
     "typecheck": "bun --bun tsc --noEmit",
@@ -12,6 +13,7 @@
     "fix": "cli tools fix"
   },
   "dependencies": {
+    "@fake/components": "workspace:*",
     "react": "^18",
     "react-dom": "^18",
     "next": "14.0.4"
@@ -23,5 +25,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "tsconfig": "workspace:*"
+  },
+  "imports": {
+    "#docgen/*": {
+      "types": "./docgen/*.ts",
+      "default": "./docgen/*.ts"
+    }
   }
 }
