--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -1,10 +1,17 @@
 {
   "extends": "tsconfig/next-app.json",
   "compilerOptions": {
+    "target": "ESNext",
     "paths": {
-      "@/*": ["./src/*"]
+      "~/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "docgen.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
