--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "tsconfig/bun.json",
+  "extends": "tsconfig/react-library.json",
   "include": ["."],
   "compilerOptions": {
+    "rootDir": "src",
     "paths": {
       "~/*": ["./*"]
     }
