fix biome failure

--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -28,8 +28,8 @@
   },
   "imports": {
     "#docgen/*": {
-      "types": "./docgen/*.ts",
-      "default": "./docgen/*.ts"
+      "types": "./.docgen/*.ts",
+      "default": "./.docgen/*.ts"
     }
   }
 }
