--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.4.1/schema.json",
   "files": {
-    "ignore": [".next", ".expo", ".turbo", ".env*"]
+    "ignore": [".next", ".expo", ".turbo", ".docgen", ".env*", "expo-env.d.ts"]
   },
   "organizeImports": {
     "enabled": true
