--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,7 @@
       "persistent": true,
       "dependsOn": ["^build"]
     },
-    "biome": {
+    "lint": {
       "dependsOn": ["^build"]
     },
     "fix": {
